fixed the overflow issued

--- a/public/css/chessRoom.css
+++ b/public/css/chessRoom.css
@@ -1,16 +1,10 @@
 .chessBoard{
-/*	height: 100%;*/
-	
-	
+	height: 100%;
 	position: relative;
 	background: linear-gradient(to right bottom, #ffefba, #fff3c8);
 	border-radius: 20px;
 /*	box-shadow: 3px 3px 3px 3px lightgray, -3px 3px 3px 3px lightgray ;*/
 	
-/*	position: absolute;*/
-
-	
-/*	min-height: 500px;*/
 }
 
 
@@ -18,13 +12,9 @@ body {
   /* The image used */  /* Center and scale the image nicely */
 	background: linear-gradient(rgba(255,255,255,0),rgba(255,255,255,0.7))
     ,url(../assets/img/bg-chess-room.jpg)center/cover fixed no-repeat;
+	overflow: hidden;
 }
-
-/*
-.right-of-board{
-    margin-left: 5px;
-}
-*/
+	
 
 .message{
 	position: fixed;
@@ -34,7 +24,7 @@ body {
 }
 
 #right-of-board{
-	height: 100%;
+/*	height: 100%;*/
 	flex-basis: 25%
 }
 
@@ -43,10 +33,17 @@ body {
 }
 
 #chats-container{
-	max-width: 400px
+	height: 75%;
+	overflow-y: auto
 }
-
-
+/*
+.list-group{
+	height: 95%
+}
+*/
+p{
+	word-break: break-word
+}
 
 #message-post{
 
@@ -55,9 +52,6 @@ body {
 .timer-container{
 	box-shadow:0 2px 10px 1px rgba(50,70,112,.4);
 
-}
-.timer{
-	/* box-shadow:0 2px 10px 1px rgba(30,45,86,.2); */
 }
 
 .stone{
